--- a/Resourse/Behost/style.css
+++ b/Resourse/Behost/style.css
@@ -1,229 +1,180 @@
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+ 
 body {
-    background-color: #ffffff;
-    color: #444444;
-    font-family: 'Roboto', sans-serif;
-    font-size: 16px;
-    font-weight: 300;
-    margin: 0;
-    padding: 0;
+  font-family: 'Poppins', sans-serif;
+  font-size: 16px;
+  color: #2c2c2c;
+}
+body a {
+  color: inherit;
+  text-decoration: none;
+}
+.header {
+  max-width: 600px;
+  margin: 50px auto;
+  text-align: center;
+}
+ 
+.header__title {
+  margin-bottom: 30px;
+  font-size: 2.1rem;
+}
+ 
+.content {
+  width: 95%;
+  margin: 0 auto 50px;
+}
+ 
+.content__title {
+  margin-bottom: 40px;
+  font-size: 20px;
+  text-align: center;
+}
+ 
+.content__title--m-sm {
+  margin-bottom: 10px;
+}
+ 
+.multisteps-form__progress {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(0, 1fr));
+}
+ 
+.multisteps-form__progress-btn {
+  transition-property: all;
+  transition-duration: 0.15s;
+  transition-timing-function: linear;
+  transition-delay: 0s;
+  position: relative;
+  padding-top: 20px;
+  color: rgba(108, 117, 125, 0.7);
+  text-indent: -9999px;
+  border: none;
+  background-color: transparent;
+  outline: none !important;
+  cursor: pointer;
+}
+@media (min-width: 500px) {
+  .multisteps-form__progress-btn {
+    text-indent: 0;
   }
-  .wizard-content-left {
-    background-blend-mode: darken;
-    background-color: rgba(0, 0, 0, 0.45);
-    background-image: url("https://i.ibb.co/X292hJF/form-wizard-bg-2.jpg");
-    background-position: center center;
-    background-size: cover;
-    height: 100vh;
-    padding: 30px;
-  }
-  .wizard-content-left h1 {
-    color: #ffffff;
-    font-size: 38px;
-    font-weight: 600;
-    padding: 12px 20px;
-    text-align: center;
-  }
-  
-  .form-wizard {
-    color: #888888;
-    padding: 30px;
-  }
-  .form-wizard .wizard-form-radio {
-    display: inline-block;
-    margin-left: 5px;
-    position: relative;
-  }
-  .form-wizard .wizard-form-radio input[type="radio"] {
-    -webkit-appearance: none;
-    -moz-appearance: none;
-    -ms-appearance: none;
-    -o-appearance: none;
-    appearance: none;
-    background-color: #dddddd;
-    height: 25px;
-    width: 25px;
-    display: inline-block;
-    vertical-align: middle;
-    border-radius: 50%;
-    position: relative;
-    cursor: pointer;
-  }
-  .form-wizard .wizard-form-radio input[type="radio"]:focus {
-    outline: 0;
-  }
-  .form-wizard .wizard-form-radio input[type="radio"]:checked {
-    background-color: #fb1647;
-  }
-  .form-wizard .wizard-form-radio input[type="radio"]:checked::before {
-    content: "";
-    position: absolute;
-    width: 10px;
-    height: 10px;
-    display: inline-block;
-    background-color: #ffffff;
-    border-radius: 50%;
-    left: 1px;
-    right: 0;
-    margin: 0 auto;
-    top: 8px;
-  }
-  .form-wizard .wizard-form-radio input[type="radio"]:checked::after {
-    content: "";
-    display: inline-block;
-    -webkit-animation: click-radio-wave 0.65s;
-    -moz-animation: click-radio-wave 0.65s;
-    animation: click-radio-wave 0.65s;
-    background: #000000;
-    content: '';
-    display: block;
-    position: relative;
-    z-index: 100;
-    border-radius: 50%;
-  }
-  .form-wizard .wizard-form-radio input[type="radio"] ~ label {
-    padding-left: 10px;
-    cursor: pointer;
-  }
-  .form-wizard .form-wizard-header {
-    text-align: center;
-  }
-  .form-wizard .form-wizard-next-btn, .form-wizard .form-wizard-previous-btn, .form-wizard .form-wizard-submit {
-    background-color: #d65470;
-    color: #ffffff;
-    display: inline-block;
-    min-width: 100px;
-    min-width: 120px;
-    padding: 10px;
-    text-align: center;
-  }
-  .form-wizard .form-wizard-next-btn:hover, .form-wizard .form-wizard-next-btn:focus, .form-wizard .form-wizard-previous-btn:hover, .form-wizard .form-wizard-previous-btn:focus, .form-wizard .form-wizard-submit:hover, .form-wizard .form-wizard-submit:focus {
-    color: #ffffff;
-    opacity: 0.6;
-    text-decoration: none;
-  }
-  .form-wizard .wizard-fieldset {
-    display: none;
-  }
-  .form-wizard .wizard-fieldset.show {
-    display: block;
-  }
-  .form-wizard .wizard-form-error {
-    display: none;
-    background-color: #d70b0b;
-    position: absolute;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    height: 2px;
-    width: 100%;
-  }
-  .form-wizard .form-wizard-previous-btn {
-    background-color: #fb1647;
-  }
-  .form-wizard .form-control {
-    font-weight: 300;
-    height: auto !important;
-    padding: 15px;
-    color: #888888;
-    background-color: #f1f1f1;
-    border: none;
-  }
-  .form-wizard .form-control:focus {
-    box-shadow: none;
-  }
-  .form-wizard .form-group {
-    position: relative;
-    margin: 25px 0;
-  }
-  .form-wizard .wizard-form-text-label {
-    position: absolute;
-    left: 10px;
-    top: 16px;
-    transition: 0.2s linear all;
-  }
-  .form-wizard .focus-input .wizard-form-text-label {
-    color: #d65470;
-    top: -18px;
-    transition: 0.2s linear all;
-    font-size: 12px;
-  }
-  .form-wizard .form-wizard-steps {
-    margin: 30px 0;
-  }
-  .form-wizard .form-wizard-steps li {
-    width: 25%;
-    float: left;
-    position: relative;
-  }
-  .form-wizard .form-wizard-steps li::after {
-    background-color: #f3f3f3;
-    content: "";
-    height: 5px;
-    left: 0;
-    position: absolute;
-    right: 0;
-    top: 50%;
-    transform: translateY(-50%);
-    width: 100%;
-    border-bottom: 1px solid #dddddd;
-    border-top: 1px solid #dddddd;
-  }
-  .form-wizard .form-wizard-steps li span {
-    background-color: #dddddd;
-    border-radius: 50%;
-    display: inline-block;
-    height: 40px;
-    line-height: 40px;
-    position: relative;
-    text-align: center;
-    width: 40px;
-    z-index: 1;
-  }
-  .form-wizard .form-wizard-steps li:last-child::after {
-    width: 50%;
-  }
-  .form-wizard .form-wizard-steps li.active span, .form-wizard .form-wizard-steps li.activated span {
-    background-color: #d65470;
-    color: #ffffff;
-  }
-  .form-wizard .form-wizard-steps li.active::after, .form-wizard .form-wizard-steps li.activated::after {
-    background-color: #d65470;
-    left: 50%;
-    width: 50%;
-    border-color: #d65470;
-  }
-  .form-wizard .form-wizard-steps li.activated::after {
-    width: 100%;
-    border-color: #d65470;
-  }
-  .form-wizard .form-wizard-steps li:last-child::after {
-    left: 0;
-  }
-  .form-wizard .wizard-password-eye {
-    position: absolute;
-    right: 32px;
-    top: 50%;
-    transform: translateY(-50%);
-    cursor: pointer;
-  }
-  @keyframes click-radio-wave {
-    0% {
-      width: 25px;
-      height: 25px;
-      opacity: 0.35;
-      position: relative;
-    }
-    100% {
-      width: 60px;
-      height: 60px;
-      margin-left: -15px;
-      margin-top: -15px;
-      opacity: 0.0;
-    }
-  }
-  @media screen and (max-width: 767px) {
-    .wizard-content-left {
-      height: auto;
-    }
-  }
-  
+}
+.multisteps-form__progress-btn:before {
+  position: absolute;
+  top: 0;
+  left: 50%;
+  display: block;
+  width: 13px;
+  height: 13px;
+  content: '';
+  -webkit-transform: translateX(-50%);
+          transform: translateX(-50%);
+  transition: all 0.15s linear 0s, -webkit-transform 0.15s cubic-bezier(0.05, 1.09, 0.16, 1.4) 0s;
+  transition: all 0.15s linear 0s, transform 0.15s cubic-bezier(0.05, 1.09, 0.16, 1.4) 0s;
+  transition: all 0.15s linear 0s, transform 0.15s cubic-bezier(0.05, 1.09, 0.16, 1.4) 0s, -webkit-transform 0.15s cubic-bezier(0.05, 1.09, 0.16, 1.4) 0s;
+  border: 2px solid currentColor;
+  border-radius: 50%;
+  background-color: #fff;
+  box-sizing: border-box;
+  z-index: 3;
+}
+.multisteps-form__progress-btn:after {
+  position: absolute;
+  top: 5px;
+  left: calc(-50% - 13px / 2);
+  transition-property: all;
+  transition-duration: 0.15s;
+  transition-timing-function: linear;
+  transition-delay: 0s;
+  display: block;
+  width: 100%;
+  height: 2px;
+  content: '';
+  background-color: currentColor;
+  z-index: 1;
+}
+.multisteps-form__progress-btn:first-child:after {
+  display: none;
+}
+.multisteps-form__progress-btn.js-active {
+  color: #007bff;
+}
+.multisteps-form__progress-btn.js-active:before {
+  -webkit-transform: translateX(-50%) scale(1.2);
+          transform: translateX(-50%) scale(1.2);
+  background-color: currentColor;
+}
+ 
+.multisteps-form__form {
+  position: relative;
+}
+ 
+.multisteps-form__panel {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 0;
+  opacity: 0;
+  visibility: hidden;
+}
+.multisteps-form__panel.js-active {
+  height: auto;
+  opacity: 1;
+  visibility: visible;
+}
+.multisteps-form__panel[data-animation="scaleOut"] {
+  -webkit-transform: scale(1.1);
+          transform: scale(1.1);
+}
+.multisteps-form__panel[data-animation="scaleOut"].js-active {
+  transition-property: all;
+  transition-duration: 0.2s;
+  transition-timing-function: linear;
+  transition-delay: 0s;
+  -webkit-transform: scale(1);
+          transform: scale(1);
+}
+.multisteps-form__panel[data-animation="slideHorz"] {
+  left: 50px;
+}
+.multisteps-form__panel[data-animation="slideHorz"].js-active {
+  transition-property: all;
+  transition-duration: 0.25s;
+  transition-timing-function: cubic-bezier(0.2, 1.13, 0.38, 1.43);
+  transition-delay: 0s;
+  left: 0;
+}
+.multisteps-form__panel[data-animation="slideVert"] {
+  top: 30px;
+}
+.multisteps-form__panel[data-animation="slideVert"].js-active {
+  transition-property: all;
+  transition-duration: 0.2s;
+  transition-timing-function: linear;
+  transition-delay: 0s;
+  top: 0;
+}
+.multisteps-form__panel[data-animation="fadeIn"].js-active {
+  transition-property: all;
+  transition-duration: 0.3s;
+  transition-timing-function: linear;
+  transition-delay: 0s;
+}
+.multisteps-form__panel[data-animation="scaleIn"] {
+  -webkit-transform: scale(0.9);
+          transform: scale(0.9);
+}
+.multisteps-form__panel[data-animation="scaleIn"].js-active {
+  transition-property: all;
+  transition-duration: 0.2s;
+  transition-timing-function: linear;
+  transition-delay: 0s;
+  -webkit-transform: scale(1);
+          transform: scale(1);
+}
+
