--- a/Resourse/newhome/css/style.css
+++ b/Resourse/newhome/css/style.css
@@ -263,7 +263,7 @@ h1, h2, h3, h4, h5, h6, figure {
 }
 
 #fh5co-header a {
-  color: rgba(255, 255, 255, 0.5);
+  color: rgba(0, 0, 0, 0.5);
   border-bottom: 1px solid rgba(255, 255, 255, 0.5);
 }
 
@@ -1623,4 +1623,289 @@ margin-left: 7% ;
       margin-top:-118%;
       margin-left: 3% ;
       }
+      
+
+
+
+
+      .selector {
+        position: relative;
+        padding: 20px;
+        width: 400px;
+        color: #7e7e7e;
+    }
+    
+    .selector ul {
+        position: relative;
+        display: block;
+        overflow: auto;
+        min-width: 138px;
+        max-height: 200px;
+        background: #fff;
+        list-style: none;
+        white-space: inherit;
+        padding-right: 17px;
+        width: calc(100% + 17px)
+    }
+    
+    .selector li {
+        position: relative;
+        padding: 3px 20px 3px 25px;
+        cursor: pointer
+    }
+    
+    .selector li:before {
+        position: absolute;
+        top: 50%;
+        left: 0;
+        top: 4px;
+        display: inline-block;
+        margin-right: 9px;
+        width: 17px;
+        height: 17px;
+        background-color: #f4f4f4;
+        border: 1px solid #d5d5d5;
+        content: ""
+    }
+    
+    .selector li[data-selected="1"]:before {
+        border: 1px solid #d7d7d7;
+        background-color: #fff
+    }
+    
+    .selector li[data-selected="1"]:after {
+        position: absolute;
+        top: 50%;
+        left: 3px;
+        top: 11px;
+        display: inline-block;
+        width: 4px;
+        height: 10px;
+        border-right: 2px solid;
+        border-bottom: 2px solid;
+        background: none;
+        color: #39c9a9;
+        content: "";
+        -webkit-transform: rotate(40deg) translateY(-50%);
+        transform: rotate(40deg) translateY(-50%)
+    }
+    
+    .selector li:hover {
+        color: #aaa
+    }
+    
+    .selector li .total {
+        position: absolute;
+        right: 0;
+        color: #d7d7d7
+    }
+    
+    .selector .price-slider {
+        text-align: center;
+        display: -webkit-box;
+        display: -ms-flexbox;
+        display: flex;
+        -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+        -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+        justify-content: space-between;
+        -webkit-box-align: center;
+        -ms-flex-align: center;
+        align-items: center;
+        position: relative;
+        padding-top: 17px
+    }
+    
+    @media (min-width: 768px) {
+        .selector .price-slider {
+            padding-top:8px
+        }
+    }
+    
+    .selector .price-slider:before {
+        position: absolute;
+        top: 50%;
+        left: 0;
+        margin-top: 0;
+        color: #39c9a9;
+        content: attr(data-currency);
+        -webkit-transform: translateY(-50%);
+        transform: translateY(-50%)
+    }
+    
+    .selector #slider-range {
+        width: 90%;
+        margin-bottom: 30px;
+        border: none;
+        background: #6551f2;
+        height: 3px;
+        margin-left: 8px;
+        margin-right: 8px
+    }
+    
+    @media (min-width: 768px) {
+         .selector #slider-range {
+            width:100%
+        }
+    }
+    
+    .selector .ui-slider-handle {
+        border-radius: 50%;
+        background-color: #39c9a9;
+        border: none;
+        top: -14px;
+        width: 28px;
+        height: 28px;
+        outline: none
+    }
+    
+    @media (min-width: 768px) {
+        .selector .ui-slider-handle {
+            top:-7px;
+            width: 16px;
+            height: 16px
+        }
+    }
+    
+    .selector .ui-slider-range {
+        background-color: #d7d7d7
+    }
+    
+    .selector .slider-price {
+        position: relative;
+        display: inline-block;
+        padding: 5px 40px;
+        width: 40%;
+        background-color: #d5e5fa;
+        line-height: 28px;
+        text-align: center
+    }
+    
+    .selector .slider-price:before {
+        position: absolute;
+        top: 50%;
+        left: 13px;
+        margin-top: 0;
+        color: #39c9a9;
+        content: attr(data-currency);
+        -webkit-transform: translateY(-50%);
+        transform: translateY(-50%)
+    }
+    
+    .selector .show-all {
+        position: relative;
+        padding-left: 25px;
+        color: #39c9a9;
+        cursor: pointer;
+        line-height: 28px
+    }
+    
+    .selector .show-all:after, .selector .show-all:before {
+        content: "";
+        position: absolute;
+        top: 50%;
+        left: 4px;
+        margin-top: -1px;
+        color: #39c9a9;
+        width: 10px;
+        border-bottom: 1px solid
+    }
+    
+    .selector .show-all:after {
+        -webkit-transform: rotate(90deg);
+        transform: rotate(90deg)
+    }
+    
+    .selector.open ul {
+        max-height: none
+    }
+    
+    .selector.open .show-all:after {
+        display: none
+    }
+    
+    
+    * {
+        -webkit-box-sizing: border-box;
+        -ms-box-sizing: border-box;
+        box-sizing: border-box;
+    }
+
+
+
+    /* The radio */
+.radio {
+ 
+  display: block;
+ position: relative;
+ padding-left: 30px;
+ margin-bottom: 12px;
+ cursor: pointer;
+ font-size: 18px;
+ -webkit-user-select: none;
+ -moz-user-select: none;
+ -ms-user-select: none;
+ user-select: none;
+  color: #8b8b8b;
+  /*! font-family: unset; */
+  font-weight: normal;
+}
+
+/* Hide the browser's default radio button */
+.radio input {
+ position: absolute;
+ opacity: 0;
+ cursor: pointer;
+}
+
+/* Create a custom radio button */
+.checkround {
+
+ position: absolute;
+ top: 6px;
+ left: 0;
+ height: 20px;
+ width: 20px;
+ background-color: #fff ;
+ border-color:#00e8a8;
+ border-style:solid;
+ border-width:2px;
+  border-radius: 50%;
+}
+
+
+/* When the radio button is checked, add a blue background */
+.radio input:checked ~ .checkround {
+ background-color: #fff;
+}
+
+/* Create the indicator (the dot/circle - hidden when not checked) */
+.checkround:after {
+ content: "";
+ position: absolute;
+ display: none;
+}
+
+/* Show the indicator (dot/circle) when checked */
+.radio input:checked ~ .checkround:after {
+ display: block;
+}
+
+/* Style the indicator (dot/circle) */
+.radio .checkround:after {
+  left: 2px;
+ top: 2px;
+ width: 12px;
+ height: 12px;
+ border-radius: 50%;
+ background:#01caa8;
+ 
+
+}
+
+.cage {
+  margin-left: 10px;
+}
+
       
